Commit debug